<resources>
    <string name="app_name">Fumagalli2020</string>
    <string name="strLoginPage">Login Page</string>
    <string name="strRegisterPage">Registration Page</string>
    <string name="strChainPage">Chain Page</string>
    <string name="strCartListPage">Cart List Page</string>
    <string name="strMyProfilePage">My Profile Page</string>
    <string name="strMarketListPage">Market List Page</string>
    <string name="strMyCartPage">My Cart Page</string>
    <string name="strCategoryListPage">Category List Page</string>
    <string name="strProductListPage">Product List Page</string>
    <string name="strMyOrdersPage">My Orders Page</string>
    <string name="strTermsPage">Terms Page</string>
    <string name="strLogin">Accedi</string>
    <string name="strRegistration">Registrazione</string>
    <string name="strBack">Indietro</string>
    <string name="strEmail">Email</string>
    <string name="strPassword">Password</string>
    <string name="strName">Nome</string>
    <string name="strSurname">Cognome</string>
    <string name="strPhoneNumber">Numero Cellulare</string>
    <string name="strBirthDate">Data di Nascita</string>
    <string name="strFiscalCode">Codice Fiscale</string>
    <string name="strMyOrders">I miei Ordini</string>
    <string name="strLogout">Logout</string>
    <string name="strTerms">Termini</string>
    <string name="strConfirm">Conferma</string>
    <string name="strReadTerms">Leggi i termini</string>
    <string name="strCheckBoxTerms"> Dichiaro di aver letto e accettato l\'informativa sulla privacy. </string>
    <string name="strCheckBoxNewsLetter"> Si desidero ricevere offerte speciali ed essere informato su promozioni e novità (facoltativo)</string>
    <string name="strTotal"> Totale </string>
    <string name="strQuantity"> Quantità </string>
    <string name="strQuantitySelected"> Quantità Selezionata</string>
    <string name="strCleanCart"> Pulisci Carrello </string>
    <string name="strErrorName"> Nome obbligatorio</string>
    <string name="strErrorSurname"> Cognome obbligatorio</string>
    <string name="strErrorBirthDate"> Data di nascita obbligatoria</string>
    <string name="strErrorMobile">Numero di cellulare non valido</string>
    <string name="strErrorFiscalCode">Codice fiscale non valido</string>
    <string name="strErrorEmail">Email non valida</string>
    <string name="strErrorPassword">Password non valida</string>
    <string name="strResetPassword">Reimposta Password</string>
    <string name="strResetInstruction">Inserisci l\'email con la quale ti sei registrato. Riceverai alla stessa le istruzioni per cambiare la tua password!</string>
    <string name="strResetButton">Reimposta Password</string>
    <string name="TermsList">Terms List &amp; Privacy Policy</string>
    <string name="strAdminInfo">Contatta Amministratore</string>
    <string name="strAdInDesc">Descrizione pagina informazioni amministratore</string>
    <string name="strAdInEmail">Email: projectfumagalliids@gmail.com</string>
    <string name="strAdInPhone">Telefono: 333 33333333</string>
    <string name="strMarketName">Ragione Sociale</string>
    <string name="strMarketAddress">Indrizzo Negozio</string>
    <string name="strMarketCity">Città Negozio</string>
    <string name="strMarketCAP">CAP Negozio</string>
    <string name="strMarketChain">Catena Negozio</string>
    <string name="strMarketPhone">Telefono Negozio</string>
    <string name="strMarketEmail">Email Negozio</string>
    <string name="strLun">LUNEDÌ</string>
    <string name="strMar">MARTEDÌ</string>
    <string name="strMer">MERCOLEDÌ</string>
    <string name="strGio">GIOVEDÌ</string>
    <string name="strVen">VENERDÌ</string>
    <string name="strSab">SABATO</string>
    <string name="strDom">DOMENICA</string>
    <string name="strContinued">Orario Continuato</string>
    <string name="strOpen">APERTURA</string>
    <string name="strClose">CHIUSURA</string>
    <string name="strBtnRegMarket">Registra Negozio &amp; Procedi</string>
    <string name="strRegMarketAdmin">Registra Amministratore Negozio</string>
    <string name="strClosedDay">Giorno di Chiusura</string>
    <string name="strAdd">Aggiungi</string>
    <string name="strTimeTable">ORARIO</string>
    <string name="strHyphen">-</string>
    <string name="strBuy">Acquista</string>
    <string name="strCategoryDesc">Descrizione Categoria</string>
    <string name="strPay">Paga &amp; Genera Ordina</string>
    <string name="strCVV">CVV</string>
    <string name="strCard">Numero Carta</string>
    <string name="strTblDay">GIORNO</string>
    <string name="strTblTime">ORARI</string>
    <string name="strOrderDate">Data Ritiro</string>
    <string name="strOrderTime">Orario Ritiro</string>
    <string name="strExpDate">Scad.</string>
    <string name="strExpSep">/</string>
    <string name="strEuro">€</string>
    <string name="strZeroEuro">0.0</string>
    <string name="strNext">Prosegui</string>
    <string name="strLogisticMarket">Negozio</string>
    <string name="strLogisticOrders">Ordini</string>
    <string name="strX">x</string>
    <string name="strModifyInfo">Modifica Dati</string>
    <string name="strModifyHours">Modifica Orari Negozio</string>
    <string name="strAcceptModify"> Salva modifiche</string>
    <string name="strEmployee">Dipendenti</string>
    <string name="strProductOrigin">Origine</string>
    <string name="strProductPrice">Prezzo</string>
    <string name="strProductPackage">Data Confezionamento</string>
    <string name="strProductExpire">Data Scadenza</string>
    <string name="strWork">Mansione</string>
</resources>
