<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtRegName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="text"
                android:hint="@string/strName"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtRegSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="text"
                android:hint="@string/strSurname"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtRegBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="date"
                android:hint="@string/strBirthDate"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtRegMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="phone"
                android:hint="@string/strPhoneNumber"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtRegFiscalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="text"
                android:hint="@string/strFiscalCode"
                tools:targetApi="jelly_bean"/>

            <EditText
                android:id="@+id/edtRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:hint="@string/strEmail"
                tools:targetApi="jelly_bean" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:hint="@string/strPassword"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/chbRegReadTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"
                android:text="@string/strCheckBoxTerms"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvRegReadTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:linksClickable="true"
                android:gravity="right"
                android:textColor="@color/clLightBlue"
                android:text="@string/strReadTerms"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chbRegNewsLetter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"
                android:text="@string/strCheckBoxNewsLetter"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/btnRegRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:text="@string/strConfirm"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/btnRegBackToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:text="@string/strBack"
                tools:targetApi="jelly_bean" />


        </LinearLayout>



</ScrollView>