<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center">

        <EditText
            android:id="@+id/edtRegEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/strName" />

        <EditText
            android:id="@+id/edtRegEmployeeSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/strSurname" />

        <EditText
            android:id="@+id/edtRegEmployeeMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/strPhoneNumber" />


        <EditText
            android:id="@+id/edtRegEmployeeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/strEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRegEmployeePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/strPassword"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spnRegEmployeeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnRegEmployeeRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:text="@string/strConfirm"
            tools:targetApi="jelly_bean" />

    </LinearLayout>

</ScrollView>