<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?actionBarSize"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strName"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvProfileSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strSurname"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvProfileBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strBirthDate"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvProfileMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strPhoneNumber"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvProfileFiscalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strFiscalCode"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tvProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:hint="@string/strEmail"
                tools:targetApi="jelly_bean" />

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>