<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center">

        <EditText
            android:id="@+id/edtCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/strName" />


        <EditText
            android:id="@+id/edtCategoryDesc"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:hint="@string/strCategoryDesc"/>

        <Button
            android:id="@+id/btnRegCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:text="@string/strConfirm"
            tools:targetApi="jelly_bean" />

    </LinearLayout>

</ScrollView>