<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strName"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custName"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strSurname"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custSurname"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strFiscalCode"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custFiscalCode"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strBirthDate"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custBirthDate"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strPhoneNumber"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custMobile"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strEmail"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/clBlack" />

            <EditText
                android:id="@+id/custEmail"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:enabled="false"
                />


            <Button
                android:id="@+id/btnToCustModifyData"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/strModifyInfo"
                />

            <Button
                android:id="@+id/btnSaveChanges"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:text="@string/strAcceptModify"
                android:visibility="invisible" />

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/cust_bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>