<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/clWhite"
    tools:context=".UI.AdminInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="start">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="35dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/strAdInDesc">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/strAdInEmail">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/strAdInPhone">
            </TextView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>